--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,26 +10,28 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Set up Node.js
-      uses: action/setup-node@v4
-      with:
-        node-version: 18
-      # Backend
-    - name: Install backend dependencies
-      working-directory: Backend
-      run: npm install
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
 
-    - name: Backend build check
-      working-directory: Backend
-      run: echo "Backend ready"
-      # Frontend
-    - name: Install frontend dependencies
-      working-directory: Frontend   
-      run: npm install
+      # -------- Backend --------
+      - name: Install backend dependencies
+        working-directory: Backend
+        run: npm install
 
-    - name: Build frontend
-      working-directory: Frontend
-      run: npm run build
+      - name: Backend check
+        working-directory: Backend
+        run: node -v
+
+      # -------- Frontend --------
+      - name: Install frontend dependencies
+        working-directory: Frontend
+        run: npm install
+
+      - name: Build frontend
+        working-directory: Frontend
+        run: npm run build
