--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,32 +6,22 @@ on:
       - main
 
 jobs:
-  build:
+  docker-build:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 18
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-      # -------- Backend --------
-      - name: Install backend dependencies
-        working-directory: Backend
-        run: npm install
+      # ---------- Backend Docker Image ----------
+      - name: Build backend Docker image
+        run: |
+          docker build -t todo-backend ./Backend
 
-      - name: Backend check
-        working-directory: Backend
-        run: node -v
-
-      # -------- Frontend --------
-      - name: Install frontend dependencies
-        working-directory: Frontend
-        run: npm install
-
-      - name: Build frontend
-        working-directory: Frontend
-        run: npm run build
+      # ---------- Frontend Docker Image ----------
+      - name: Build frontend Docker image
+        run: |
+          docker build -t todo-frontend ./Frontend
