--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  docker-build:
+  docker-build-push:
     runs-on: ubuntu-latest
 
     steps:
@@ -16,12 +16,20 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      # ---------- Backend Docker Image ----------
-      - name: Build backend Docker image
-        run: |
-          docker build -t todo-backend ./Backend
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # ---------- Frontend Docker Image ----------
-      - name: Build frontend Docker image
+      # -------- Backend --------
+      - name: Build & push backend image
         run: |
-          docker build -t todo-frontend ./Frontend
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/todo-backend:latest ./Backend
+          docker push ${{ secrets.DOCKER_USERNAME }}/todo-backend:latest
+
+      # -------- Frontend --------
+      - name: Build & push frontend image
+        run: |
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/todo-frontend:latest ./Frontend
+          docker push ${{ secrets.DOCKER_USERNAME }}/todo-frontend:latest
