fix issue in yml and ready to deploy

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,5 +47,5 @@ jobs:
           key: ${{ secrets.AZURE_SSH_KEY }}
           script: |
             cd devops-todo
-            docker compose pull
-            docker compose up -d
+            docker-compose pull
+            docker-compose up -d
