fixed the issue of creating container

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,5 +47,6 @@ jobs:
           key: ${{ secrets.AZURE_SSH_KEY }}
           script: |
             cd devops-todo
+            docker-compose down
             docker-compose pull
             docker-compose up -d
